Tipos da base de dados relacionais

--- a/Base_de_Dados_e_Linguagem_SQL_.ipynb
+++ b/Base_de_Dados_e_Linguagem_SQL_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPCKrGlTTESvtPrhmAokJKn",
+      "authorship_tag": "ABX9TyOfIPOXzz1/VMP8BNLhwPlF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,10 +57,41 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Sistema Gerenciador de Base de Dados\n",
+        "> Software que gerencia o armazenamento físico de dados\n",
+        "\n",
+        "Alguns exemplos:\n",
+        "- MySQL\n",
+        "- PostgreSQL\n",
+        "- MariaDB\n",
+        "- Oracle\n"
+      ],
+      "metadata": {
+        "id": "QhPKcN2Pr2qh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "###1.2 Lógico"
       ],
       "metadata": {
         "id": "XNdIBo1784NC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conceitos relacionados a organização lógica dos dados. \n",
+        "\n",
+        "- Tabela\n",
+        "> Estrutura tabular de dados organizados em linhas e colunas\n",
+        "\n",
+        "- Base de Dados\n",
+        "> Conjunto de tabelas"
+      ],
+      "metadata": {
+        "id": "yOhW3xl2sEqx"
       }
     },
     {
