Criando a conta na AWS Console

--- a/Base_de_Dados_e_Linguagem_SQL_.ipynb
+++ b/Base_de_Dados_e_Linguagem_SQL_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMRlJzDTcGA2GutyQqWTtms",
+      "authorship_tag": "ABX9TyNSg4+qsTC1x8W7GawyfaaS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -271,7 +271,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Query 2:Selecionar a média da idade dos clientes por sexo da tabela de clientes.** \n",
+        "**Query 2: Selecionar a média da idade dos clientes por sexo da tabela de clientes.** \n",
         "\n",
         "```sql\n",
         "SELECT sexo, AVG(idade) AS \"media_idade_por_sexo\" FROM clientes GROUP BY sexo;\n",
@@ -288,6 +288,36 @@
       ],
       "metadata": {
         "id": "4EKRLi8Z85AN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A Amazon Web Service (AWS) é uma plataforma de computação em nuvem. Ela oferece uma série de serviços de computação, armanezamento de dados, etc. Vamos utilizar dois serviços da plataforma para construir o nosso SGBD e aprender o SQL:"
+      ],
+      "metadata": {
+        "id": "F30pk_492Zp7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " - AWS [S3](https://aws.amazon.com/pt/s3/): Serviço de armazenamento de dados;\n",
+        " - AWS [Athena](https://aws.amazon.com/pt/athena/): Serviços de computação em SQL."
+      ],
+      "metadata": {
+        "id": "PUZPaGG-2a4J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> **Atenção:** Todo serviço utilizado tem um custo associado! Se a sua conta da AWS é nova, você é elegível a diversos serviços gratuitos (por tempo/quota de uso, etc.). Confira nesse [link](https://aws.amazon.com/pt/free) a oferta atual (elas podem mudar ao longo do tempo).\n",
+        "\n",
+        "> Para criar a sua conta na plataforma, basta acessar este [link](https://portal.aws.amazon.com/)."
+      ],
+      "metadata": {
+        "id": "AmeMhc9p2e7C"
       }
     },
     {
