Criação do Bucket e armazenamento no S3

--- a/Base_de_Dados_e_Linguagem_SQL_.ipynb
+++ b/Base_de_Dados_e_Linguagem_SQL_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNSg4+qsTC1x8W7GawyfaaS",
+      "authorship_tag": "ABX9TyMo9Je400RuQV5Onzbn/iTZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -341,6 +341,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "O AWS [S3](https://aws.amazon.com/pt/s3/) é um serviço de armazenameto distribuido e sem servidor que atua como um repositório de dados."
+      ],
+      "metadata": {
+        "id": "NCHd9Bza6vsK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "###4.2 Funcionamento"
       ],
       "metadata": {
@@ -350,10 +359,30 @@
     {
       "cell_type": "markdown",
       "source": [
+        "1. Um *bucket* é uma partição lógica de dados, como uma pasta do seu computador;\n",
+        "2. Um objeto é um dado que você armazena dentro de um um *bucket*;\n",
+        "3. Outros serviços da plataforma podem acessar os dados armazenados. "
+      ],
+      "metadata": {
+        "id": "b78n53Mx66iw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "###4.3 Definição de Preço"
       ],
       "metadata": {
         "id": "WrW7FnU285eU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "O AWS [S3](https://aws.amazon.com/pt/s3/) cobra por volume de dados armazenado. O preço atual é complexo, mas inicia-se com 0,0405 USD por *gigabyte* (GB) armazenado (0,21 BRL aproximadamente). É possível consultar o preço na página web do serviço ([link](https://aws.amazon.com/pt/s3/pricing/?nc=sn&loc=4))."
+      ],
+      "metadata": {
+        "id": "YvI8pZlw67-c"
       }
     },
     {
