Realizando consultas pelo Athena

--- a/Base_de_Dados_e_Linguagem_SQL_.ipynb
+++ b/Base_de_Dados_e_Linguagem_SQL_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMo9Je400RuQV5Onzbn/iTZ",
+      "authorship_tag": "ABX9TyPPPFEBgulpsHwViPTa+MOL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -406,10 +406,30 @@
     {
       "cell_type": "markdown",
       "source": [
+        "O AWS [Athena](https://aws.amazon.com/pt/athena/) é um serviço de computação distribuida e sem servidor que atua como um motor de consulta (*query engine*)."
+      ],
+      "metadata": {
+        "id": "WM_Mu-9oBOVC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "###6.2 Funcionamento"
       ],
       "metadata": {
         "id": "07mqVJlE85vs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Transforma uma *query* em código;\n",
+        "2. Processa os arquivos armazenados no AWS S3 com o código gerado; \n",
+        "3. Retorna os resultados no console. "
+      ],
+      "metadata": {
+        "id": "M2TQg-UNBPgM"
       }
     },
     {
@@ -424,10 +444,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Exercícios**"
+        "O AWS [Athena](https://aws.amazon.com/pt/athena/) cobra por consulta. O preço atual é de 9,00 USD por *terabyte* escaneado (47,46 BRL aproximadamente). É possível consultar o preço na página web do serviço ([link](https://aws.amazon.com/pt/athena/pricing/?nc=sn&loc=3))."
       ],
       "metadata": {
-        "id": "CcNmYI2j861u"
+        "id": "_92U8PVeBRok"
       }
     }
   ]
